--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.13.2",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.3"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "firebase": "^3.7.2",
